добавлены переменные перемещения

--- a/index.html
+++ b/index.html
@@ -180,7 +180,30 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script>
+  var fireballSize = 22px;
+  var getFireballSpeed = function(left) {
+    if (left === true) {
+      return: 5;
+    } else {
+      return: 2;
+    }
+  }
 
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+  var getWizardHeight = function() {
+          1.337 * wizardWidth
+        }
+
+  function(getWizardX) {
+    var width;
+  }
+
+  function(getWizardY) {
+    var height;
+  }
+</script>
 <script src="js/game.js"></script>
 
 </body>
