--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
       return height / 3;
     };
   </script>
+  <script src="js/state.js"></script>
   <script src="js/game.js"></script>
 
 </body>
