--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
     };
   </script>
   <script src="js/state.js"></script>
+  <script src="js/setup.js"></script>
   <script src="js/game.js"></script>
 
 </body>
