--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
   </script>
   <script src="js/state.js"></script>
   <script src="js/setup.js"></script>
+  <script src="js/dialog.js"></script>
   <script src="js/game.js"></script>
 
 </body>
